--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,9 +44,15 @@
     "@types/css-tree": "^2.0.1",
     "@types/postcss-css-variables": "^0.18.0",
     "@types/postcss-js": "^4.0.0",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
+    "@types/react-native": "0.70.7",
     "@vitest/ui": "^0.28.3",
     "postcss": "^8.4.21",
     "postcss-css-variables": "^0.18.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.70.5",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.3.0",
     "vite": "^4.1.1",
