--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -43,6 +43,7 @@
     "vitest": "^0.28.3"
   },
   "peerDependencies": {
+    "react-native-gesture-handler": ">= 2.8.0",
     "tailwindcss": ">= 3.0.0"
   },
   "react-native": "./src/index.ts"
