--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,15 +29,13 @@
     }
   },
   "dependencies": {
-    "@dhmk/zustand-lens": "^2.0.5",
     "@twind/core": "^1.1.3",
     "@twind/preset-tailwind": "^1.1.4",
     "@twind/typescript-plugin": "^0.3.5",
     "css-to-react-native": "^3.1.0",
     "css-to-react-native-transform": "^2.0.0",
     "immer": "^9.0.19",
-    "postcss-js": "^4.0.0",
-    "zustand": "^4.3.2"
+    "postcss-js": "^4.0.0"
   },
   "devDependencies": {
     "@types/css-to-react-native": "^3.0.0",
