--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -10,6 +10,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.4",
+    "@react-navigation/native-stack": "^6.9.10",
     "@react-universal/core": "*",
     "@react-universal/primitives": "*",
     "@react-universal/styled": "*",
@@ -21,6 +23,8 @@
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
