--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "sideEffects": false,
-  "main": "./src/index.ts",
+  "main": "./build/index.js",
   "types": "./src/index.ts",
   "scripts": {
     "build": "tsc",
@@ -29,37 +29,37 @@
     }
   },
   "dependencies": {
-    "@dhmk/zustand-lens": "^2.0.5",
     "@twind/core": "^1.1.3",
-    "@twind/preset-autoprefix": "^1.0.7",
     "@twind/preset-tailwind": "^1.1.4",
     "@twind/typescript-plugin": "^0.3.5",
     "css-to-react-native": "^3.1.0",
     "css-to-react-native-transform": "^2.0.0",
-    "css-tree": "^2.3.1",
     "immer": "^9.0.19",
-    "postcss": "^8.4.21",
-    "postcss-js": "^4.0.0",
-    "use-sync-external-store": "^1.2.0",
-    "zustand": "^4.3.2"
+    "postcss-js": "^4.0.0"
   },
   "devDependencies": {
+    "@mhsdesign/jit-browser-tailwindcss": "^0.2.2",
+    "@simbathesailor/use-what-changed": "^2.0.0",
     "@types/css-to-react-native": "^3.0.0",
     "@types/css-tree": "^2.0.1",
     "@types/postcss-css-variables": "^0.18.0",
     "@types/postcss-js": "^4.0.0",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
+    "@types/react-native": "0.70.7",
     "@vitest/ui": "^0.28.3",
-    "postcss-calc": "^8.2.4",
-    "postcss-color-functional-notation": "^5.0.2",
+    "postcss": "^8.4.21",
     "postcss-css-variables": "^0.18.0",
-    "postcss-nested": "^6.0.0",
-    "stylis": "^4.1.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.70.5",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.3.0",
     "vite": "^4.1.1",
     "vitest": "^0.28.3"
   },
   "peerDependencies": {
+    "postcss": ">= 8.0.0",
     "tailwindcss": ">= 3.0.0"
   },
   "react-native": "./src/index.ts"
