--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "@react-universal/core": "*",
+    "@react-universal/native-tw-to-css": "*",
     "@react-universal/primitives": "*",
     "@react-universal/styled": "*",
     "expo": "~47.0.13",
