--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,7 +34,8 @@
     "css-to-react-native-transform": "^2.0.0",
     "immer": "^9.0.19",
     "postcss-js": "^4.0.0",
-    "postcss-rem-to-pixel": "^4.1.2"
+    "postcss-rem-to-pixel": "^4.1.2",
+    "use-sync-external-store": "^1.2.0"
   },
   "devDependencies": {
     "@simbathesailor/use-what-changed": "^2.0.0",
@@ -45,6 +46,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/react-native": "0.70.7",
+    "@types/use-sync-external-store": "^0.0.3",
     "@vitest/ui": "^0.28.3",
     "postcss": "^8.4.21",
     "postcss-css-variables": "^0.18.0",
