--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -29,9 +29,8 @@
   "module": "./build/index.cjs.js",
   "types": "./src/index.ts",
   "scripts": {
-    "build": "tsx src/build.ts",
-    "test:ui": "vitest --ui",
-    "vite:build": "yarn vite build"
+    "build": "yarn vite build",
+    "test:ui": "vitest --ui"
   },
   "config": {
     "commitizen": {
@@ -40,6 +39,7 @@
   },
   "dependencies": {
     "postcss": "8.4.21",
+    "postcss-color-rgb": "^2.0.0",
     "postcss-css-variables": "0.18.0",
     "tailwindcss": "3.2.4"
   },
