--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -63,5 +63,9 @@
     "postcss": ">= 8.0.0",
     "tailwindcss": ">= 3.0.0"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
+  },
   "react-native": "./src/index.ts"
 }
