--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -63,5 +63,9 @@
   "peerDependencies": {
     "next": ">= 13.0.0"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
+  },
   "react-native": "./src/index.ts"
 }
