--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -47,5 +47,9 @@
     "react-native-gesture-handler": ">= 2.8.0",
     "tailwindcss": ">= 3.0.0"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
+  },
   "react-native": "./src/index.ts"
 }
