--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -56,6 +56,7 @@
     "node": ">=16.0.0"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
   }
 }
