--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,9 @@
 {
   "packages": ["packages/*"],
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "command": {
+    "version": {
+      "conventionalCommits": true
+    }
+  }
 }
