--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,4 @@
 {
   "packages": ["packages/*"],
-  "version": "0.0.4",
-  "command": {
-    "publish": {
-      "access": "public",
-      "registry": "https://npm.pkg.github.com"
-    }
-  }
+  "version": "0.0.4"
 }
