--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-universal/tailwind",
-  "version": "0.0.9-alpha.0",
+  "version": "0.0.8-alpha.0",
   "description": "Tailwindcss Inline CSS",
   "keywords": [
     "tailwind",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/react-universal/tailwind.git",
+    "url": "https://github.com/react-universal/tailwind.git",
     "directory": "packages/tailwind"
   },
   "type": "module",
