--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-universal/core",
-  "version": "0.0.9-alpha.0",
+  "version": "0.0.9",
   "description": "Core package that contains common utils, primitives and SWC compatibility layer",
   "homepage": "https://github.com/react-universal/tailwind#readme",
   "bugs": {
