--- a/sites/twin.run/.eslintrc.json
+++ b/sites/twin.run/.eslintrc.json
@@ -10,13 +10,15 @@
         "*.tsx"
       ],
       "extends": [
-        "plugin:@nx/typescript",
-        "plugin:@nx/react"
+        "plugin:@nx/typescript"
       ],
       "rules": {
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/ban-ts-comment": "off",
         "no-restricted-globals": "off",
+        "@typescript-eslint/no-unused-vars": ["warn", {
+          "argsIgnorePattern": "^_"
+        }],
         "@typescript-eslint/no-inferrable-types": "off",
         "require-yield": "off",
         "jsx-a11y/anchor-is-valid": "off",
