--- a/sites/native-twin-docs/package.json
+++ b/sites/native-twin-docs/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^5.3.0",
     "react-syntax-highlighter": "^15.5.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
